--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Binaries for programs and plugins
+cmd/tinnitus
 *.exe
 *.exe~
 *.dll
@@ -10,3 +11,16 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Ctags
+.tags
+
+# Neovim temporary files
+*.swp
+*.swo
+*.swn
+*~
+
+# Local files
+config.yaml
+tinnitus.log
